[project]
name = "std-utils"
version = "0.0.1"
description = "Project to contain utility functions you copy in every damn project"
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"

[tool.rye]
dev-dependencies = [
    "ruff>=0.8.2",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
]

[tool.rye.scripts]
format = { chain = ["format:upgrade", "format:isort", "format:black", "format:flake8-errors"] }
"format:upgrade" = "ruff check --select UP --fix-only"
"format:isort" = "ruff check --select I --fix-only"
"format:flake8-errors" = "ruff check --fix-only"
"format:black" = "ruff format"
lint = { chain = ["lint:ruff-format", "lint:ruff", "lint:mypy"] }
"lint:ruff-format" = "ruff format --check"
"lint:ruff" = "ruff check"
"lint:mypy" = "mypy ."
pre-commit = { chain = ["format", "lint", "test"] }
"test:pytest" = "pytest ."
test = { chain = ["test:pytest"] }
setup = { chain = ["setup:install"] }
"setup:install" = "rye sync"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = [
    "W", "E", "F", "I", "N", "D", "UP", "YTT", "ANN", "ASYNC", "S",
    "BLE", "FBT", "B", "A", "C4", "DTZ", "T10", "EM", "FA", "G", "LOG",
    "INP", "PIE", "T20", "RET", "SLOT", "SIM", "TC", "ARG", "PTH", "TD",
    "PGH", "PL", "R", "TRY", "FLY", "PERF", "FURB", "DOC", "RUF"
]
extend-ignore = [
    "D107", # Missing docstring in __init__. This is not required, better to write is a class docstring
    "D203", # No blank lines allowed before function docstring
    "D212", # Multi-line docstring summary should start at the second line
    "PLR6301",  # Do not validate the `this method may be static` rule as it is not useful
]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.mypy]
python_version = "3.13"
strict = true